# lala-core

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  test.sh
include/: abstract_domain.hpp  abstract_universe.hpp  arithmetic.hpp  ast.hpp  cartesian_product.hpp  copy_dag_helper.hpp  cuda_helper.hpp  dual.hpp  fixpoint.hpp  interval.hpp  monotone_analysis.hpp  pre_universe.hpp  vstore.hpp  z.hpp
include/lala/: abstract_deps.hpp  b.hpp  cartesian_product.hpp  copy_dag_helper.hpp  fixpoint.hpp  interpretation.hpp  interval.hpp  simplifier.hpp  vstore.hpp
include/lala/logic/: algorithm.hpp  ast.hpp  binarize.hpp  diagnostics.hpp  env.hpp  iresult.hpp  logic.hpp  sort.hpp  ternarize.hpp
include/lala/universes/: arith_bound.hpp  flat_universe.hpp  nbitset.hpp  pre_b.hpp  pre_bdec.hpp  pre_binc.hpp  pre_fdec.hpp  pre_finc.hpp  pre_flb.hpp  pre_fub.hpp  pre_zdec.hpp  pre_zinc.hpp  pre_zlb.hpp  pre_zub.hpp  primitive_upset.hpp
include/logic/: algorithm.hpp  ast.hpp  env.hpp  iresult.hpp  logic.hpp  sort.hpp  types.hpp
include/universes/: chain_pre_dual.hpp  flat_universe.hpp  pre_bdec.hpp  pre_binc.hpp  pre_dual.hpp  pre_fdec.hpp  pre_finc.hpp  pre_zdec.hpp  pre_zinc.hpp  primitive_upset.hpp  upset_universe.hpp
src/: ast.cpp
tests/: CMakeLists.txt  CMakePresets.json  arithmetic_test.cpp  ast_test.cpp  cartesian_product_test.cpp  compile.sh  generic_universe_test.hpp  interval_test.cpp  vstore_test.cpp  z_test.cpp
tests/data/fzn/binary/: binary1.input.fzn  binary1.output.fzn  binary2.input.fzn  binary2.output.fzn  neq.input.fzn  neq.output.fzn  test.fzn  test27.fzn
tests/data/fzn/domain/: domain1.input.fzn  domain1.output.fzn  domain2.input.fzn  domain2.output.fzn
tests/data/fzn/nary/: nary1.input.fzn  nary1.output.fzn
tests/include/: abstract_floating_testing.hpp  abstract_testing.hpp
tests/src/: abstract_deps_test.cpp  algorithm_test.cpp  arith_bound_test.cpp  ast_test.cpp  binarize_test.cpp  cartesian_product_test.cpp  copy_dag_test.cpp  fixpoint_test_gpu.cpp  flat_universe_test.cpp  generic_universe_test.hpp  gpu_fixpoint_test.cpp  interval_floating_test.cpp  interval_test.cpp  nbitset_test.cpp  primitive_upset_test.cpp  simplifier_test.cpp  ternarize_test.cpp  universe_test.cpp  upset_universe_test.cpp  vstore_test.cpp
